modified css a little

--- a/pages/home.html
+++ b/pages/home.html
@@ -29,28 +29,28 @@
                 <div class="profile-phone-number">010 5900 2777</div>
             </section>
             <div class="profile-svg">
-                <a href="mailto:yk170901@gmail.com"><object class="contact-svg" type="image/svg+xml" data="img/gmail.svg"></object></a>
-                <a href="https://github.com/yk170901"><object class="contact-svg github-svg" type="image/svg+xml" data="img/github.svg"></object></a>
-                <a href="" onclick="alert('sorry. I don&#8217;t have an instagram account yet')"><object class="contact-svg instagram-svg" type="image/svg+xml" data="img/instagram.svg"></object></a>
+                <a href="mailto:yk170901@gmail.com"><img class="contact-svg" src="img/gmail.svg"></a>
+                <a href="https://github.com/yk170901" target="_blank"><img class="contact-svg github-svg" src="img/github.svg"></a>
+                <a href="" target="_blank" onclick="alert('sorry. I don&#8217;t have an instagram account yet')"><img class="contact-svg instagram-svg" src="img/instagram.svg"></a>
             </div>
         </aside>
         <section class="inner-book">
             <section class="inner-page">
                 <nav class="category">
                     <div class="nav nav-home">
-                        <object class="nav-svg" type="image/svg+xml" data="img/home.svg"></object>
+                        <img class="nav-svg" src="img/home.svg">
                         <span class="category-name">HOME</span>
                     </div>
                     <div class="nav nav-portfolio">
-                        <object class="nav-svg" type="image/svg+xml" data="img/portfolio.svg"></object>
+                        <img class="nav-svg" src="img/portfolio.svg">
                         <span class="category-name">PORTFOLIO</span>
                     </div>
-                    <div class="nav nav-learning">
-                        <object class="nav-svg" type="image/svg+xml" data="img/study.svg"></object>
+                    <div class="nav nav-study">
+                        <img class="nav-svg" src="img/study.svg">
                         <span class="category-name">STUDY</span>
                     </div>
-                    <div class="nav nav-memo">
-                        <object class="nav-svg" type="image/svg+xml" data="img/note.svg"></object>
+                    <div class="nav nav-note">
+                        <img class="nav-svg" src="img/note.svg">
                         <span class="category-name">NOTE</span>
                     </div>
                 </nav>
