changed paths in home.html

--- a/home.html
+++ b/home.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ava Kim - HOME</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="pages/home.css">
 </head>
 <body class="body" onload="getHeight();">
     <div class="btn lang-btn">
-        <img src="img/korean_flag.png" class="national-flag Korean-btn"/>
-        <img src="img/american_flag.png" class="national-flag English-btn"/>
+        <img src="pages/img/korean_flag.png" class="national-flag Korean-btn"/>
+        <img src="pages/img/american_flag.png" class="national-flag English-btn"/>
     </div>
     
 
     <div class="outer-book">
         <aside class="my-info">
             <div class="profile-pic">
-                <img src="img/seth.jpg"/>
+                <img src="pages/img/seth.jpg"/>
             </div>
             <div>
                 <h2 class="profile-name">Yeseul Kim</h2>
@@ -29,28 +29,28 @@
                 <div class="profile-phone-number">010 5900 2777</div>
             </section>
             <div class="profile-svg">
-                <a href="mailto:yk170901@gmail.com"><img class="contact-svg" src="img/gmail.svg"></a>
-                <a href="https://github.com/yk170901" target="_blank"><img class="contact-svg github-svg" src="img/github.svg"></a>
-                <a href="" target="_blank" onclick="alert('sorry. I don&#8217;t have an instagram account yet')"><img class="contact-svg instagram-svg" src="img/instagram.svg"></a>
+                <a href="mailto:yk170901@gmail.com"><img class="contact-svg" src="pages/img/gmail.svg"></a>
+                <a href="https://github.com/yk170901" target="_blank"><img class="contact-svg github-svg" src="pages/img/github.svg"></a>
+                <a href="" target="_blank" onclick="alert('sorry. I don&#8217;t have an instagram account yet')"><img class="contact-svg instagram-svg" src="pages/img/instagram.svg"></a>
             </div>
         </aside>
         <section class="inner-book">
             <section class="inner-page">
                 <nav class="category">
                     <div class="nav nav-home">
-                        <img class="nav-svg" src="img/home.svg">
+                        <img class="nav-svg" src="pages/img/home.svg">
                         <span class="category-name">HOME</span>
                     </div>
                     <div class="nav nav-portfolio">
-                        <img class="nav-svg" src="img/portfolio.svg">
+                        <img class="nav-svg" src="pages/img/portfolio.svg">
                         <span class="category-name">PORTFOLIO</span>
                     </div>
                     <div class="nav nav-study">
-                        <img class="nav-svg" src="img/study.svg">
+                        <img class="nav-svg" src="pages/img/study.svg">
                         <span class="category-name">STUDY</span>
                     </div>
                     <div class="nav nav-note">
-                        <img class="nav-svg" src="img/note.svg">
+                        <img class="nav-svg" src="pages/img/note.svg">
                         <span class="category-name">NOTE</span>
                     </div>
                 </nav>
