--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" user-scaleable="yes">
     <title>Ava Kim - HOME</title>
-    <link rel="stylesheet" href="pages/home.css">
+    <link rel="stylesheet" href="pages/index.css">
 </head>
 <body class="body" onload="getHeight();">
-    <div class="btn lang-btn">
+    <div class="lang-btn">
         <img src="pages/img/korean_flag.png" class="national-flag Korean-btn"/>
-        <img src="pages/img/american_flag.png" class="national-flag English-btn"/>
+        <img src="pages/img/american_flag.png" class="national-flag English-btn disabled-lang"/>
     </div>
     
 
@@ -62,7 +62,9 @@
                 </nav>
                 <article class="col-wrapper">
                     <article class="left-hand col">
-                        <h1>I'm a --</h1>
+                        <div class="introduction">
+                            <h1>I'm a --</h1>
+                        </div>
                         <span>Some interesting facts about me...</span>
         
                         <section>
