--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
     <div class="outer-book">
         <aside class="my-info">
             <div class="profile-pic">
-                <img src="pages/img/seth.jpg"/>
+                <img src="pages/img/profile.png"/>
             </div>
             <div>
                 <h2 class="profile-name">Yeseul Kim</h2>
                 <h2 class="profile-second-name">Ava</h2>
             </div>
             <section>
-                <div class="profile-desc">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</div>
+                <div class="profile-desc">
+                    생각을 멈추지 않으며 성장을 좇는 개발자, 김예슬입니다.
+                </div>
                 <div class="profile-email">yk170901@gmail.com</div>
                 <div class="profile-phone-number">010 5900 2777</div>
             </section>
@@ -62,9 +64,10 @@
                 </nav>
                 <article class="col-wrapper">
                     <article class="left-hand col">
-                        <div class="introduction">
-                            <h1>I'm a --</h1>
-                        </div>
+                        <section class="introduction" style="font-size: 25px;">
+                            <h3>I'm a --</h3>
+                        </section>
+
                         <span>Some interesting facts about me...</span>
         
                         <section>
@@ -99,5 +102,7 @@
     function getHeight(){
         document.querySelector("div.outer-book").style.height = window.innerHeight-(window.innerHeight*0.07)+"px";
     }
+
+    window.onresize = getHeight;
 </script>
 </html>
