--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" user-scaleable="yes">
     <title>Ava Kim - HOME</title>
     <link rel="stylesheet" href="pages/index.css">
+    <link rel="icon" href="pages/img/favicon.ico" type="image/x-icon">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
 </head>
 <body class="body" onload="getHeight();">
     <div class="lang-btn">
         <img src="pages/img/korean_flag.png" class="national-flag Korean-btn"/>
         <img src="pages/img/american_flag.png" class="national-flag English-btn disabled-lang"/>
     </div>
-    
 
     <div class="outer-book">
         <aside class="my-info">
@@ -65,7 +69,7 @@
                 <article class="col-wrapper">
                     <article class="left-hand col">
                         <section class="introduction" style="font-size: 25px;">
-                            <h3>I'm a --</h3>
+                            <h3>I'm a Back-End Developer</h3>
                         </section>
 
                         <span>Some interesting facts about me...</span>
