--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             <h3>I'm a Back-End Developer</h3>
                         </section>
 
-                        <span>Some interesting facts about me...</span>
+                        <span>아직 만드는 중입니다!</span>
         
                         <section>
                             <h3>Education</h3>
